--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ Nhưng cho dù có ra sao, thì con người ta vẫn phải học cách chấp 
 				</div>
 			</div>
 		</div>
+		<audio autoplay="true">
+  <source src="ane.mp3" type="audio/mp3">
+</audio>
 	</div>
 	<script src="javascript/charming.js"></script>
 	<script src="javascript/anime.js"></script>
