bg music loopin

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Nhưng cho dù có ra sao, thì con người ta vẫn phải học cách chấp 
 				</div>
 			</div>
 		</div>
-		<audio autoplay="true">
+		<audio autoplay="true" loop="true">
   <source src="ane.mp3" type="audio/mp3">
 </audio>
 	</div>
